[project]
name = "businessllm-rag-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Chang",email = "ckf30098@yahoo.com.tw"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "businessllm_rag_chat", from = "src"}]


[tool.poetry.group.data.dependencies]
boto3 = "^1.38.46"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
